--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -20,7 +20,7 @@
   border-radius: 5px;
   background: rgba(255, 255, 255, 1);
   margin: 0 auto;
-  margin-top: 10vh;
+  margin-top: 15vh;
   border-radius: 5px;
 }
 
@@ -39,6 +39,8 @@
 .modalBody {
   z-index: 20;
   background: rgba(255, 255, 255, 1);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .modalButton {
